Добавил используемые инструменты

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <div class="main-article__content">
               <h2 class="main-article__header">I'M - QA Engineer </h2>
           <p class="main-article__paragraph">Привет, Я занимаюсь тестированием и, возможно, буду тестировать ваш продукт. Если вашей команде нужен классный тестировщик, то вы его нашли!</p>
+          <p class="main-article__paragraph">Мой стек: Devtools, Postman, Charles, PostgreSQL, DBeaver, Docker, Kafka через Offset Explorer, MongoDB, Умею работать с линукс с помощью GitBash, Miro, Jira, Confluence, GitHub и GitLab а также Jager для интергационного тестирования</p>
           <a class="hero_link" href="http://t.me/MrSenSey" target="_blank"><i class='bx bxl-telegram'></i></a>
           <a class="hero_link" href="https://vk.com/id179875597" target="_blank"><i class='bx bxl-vk'></i></a>
           <a class="hero_link" href="https://github.com/MrSenSey-Qa/" target="_blank"><i class='bx bxl-github'></i></a>
